<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Primeiro número -->
    <TextView
        android:id="@+id/labelPrimeiroNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeiro_n_mero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/primeiroNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/labelPrimeiroNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Segundo número -->
    <TextView
        android:id="@+id/labelSegundoNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo_n_mero"
        app:layout_constraintTop_toBottomOf="@id/primeiroNumero"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/segundoNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/labelSegundoNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Botões de operação -->

    <Button
        android:id="@+id/adicao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/subtracao"
        app:layout_constraintTop_toBottomOf="@id/segundoNumero"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/subtracao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintStart_toEndOf="@id/adicao"
        app:layout_constraintEnd_toStartOf="@id/divisao"
        app:layout_constraintTop_toTopOf="@id/adicao" />

    <Button
        android:id="@+id/divisao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="/"
        app:layout_constraintStart_toEndOf="@id/subtracao"
        app:layout_constraintEnd_toStartOf="@id/multiplicacao"
        app:layout_constraintTop_toTopOf="@id/adicao" />

    <Button
        android:id="@+id/multiplicacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="x"
        app:layout_constraintStart_toEndOf="@id/divisao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/adicao" />

    <!-- Resultado -->
    <TextView
        android:id="@+id/resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/adicao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/compartilhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartilhar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

</androidx.constraintlayout.widget.ConstraintLayout>
